# StockNova

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py  akshare_misc.py  base.py  eastmoney.py  eastmoney_ext.py  sina_quote.py  tencent_quote.py
backend/app/api/: __init__.py  backtest.py  diagnosis.py  health.py  holdings.py  market.py  news.py  settings.py  strategies.py  tasks.py  watchlist.py  ws.py
backend/app/backtest/: __init__.py  engine.py
backend/app/core/: __init__.py  config.py  database.py  events.py  exceptions.py  scheduler.py
backend/app/models/: __init__.py  orm.py
backend/app/services/: __init__.py  ai_client.py  backtest_service.py  calendar_service.py  diagnosis_service.py  ext_sync_service.py  holdings_service.py  market_store.py  minute_sync_service.py  news_service.py  notify_service.py  prompt_service.py  quote_service.py  report_service.py  settings_service.py  strategy_service.py  sync_service.py  watchlist_service.py
backend/app/strategy/: __init__.py  builtin.py  engine.py  factors.py  indicators.py  intraday.py
backend/scripts/: auto_resume.ps1  watch_sync.ps1
backend/tests/: conftest.py  test_adapters.py  test_backtest_engine.py  test_ext_data.py  test_health.py  test_market_query.py  test_quote_service.py  test_settings.py  test_strategy_engine.py
desktop/: build.ps1  launcher.py
frontend/: .npmrc  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: AppLayout.tsx  nav.ts  router.tsx
frontend/src/lib/: api.ts  csv.ts  format.ts  kline.ts  useECharts.ts  useSyncStatus.ts  utils.ts  ws.ts
scripts/: dev.ps1
(+49 files in other folders)
